Fixed return button display problem on mobile

--- a/styles.less
+++ b/styles.less
@@ -404,6 +404,7 @@ label[for="unbeatableAI"]::after {
   position: relative;
   cursor: pointer;
   margin-bottom: 50px;
+  color: black;
 
   &:hover {
     background-color: #8dd0ab;
